--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -51,7 +51,7 @@
 .social a:focus-visible {
     background: var(--surface-level-1-hover);
     color: var(--colour-primary);
-    transform: translateY(-2px);
+    transform: translateY(calc(var(--space-scale-025) / -2));
     box-shadow: var(--shadow-elev-2);
 }
 
@@ -60,7 +60,7 @@
     .social a:hover {
         background: var(--surface-level-1-hover);
         color: var(--colour-primary);
-        transform: translateY(-2px);
+        transform: translateY(calc(var(--space-scale-025) / -2));
         box-shadow: var(--shadow-elev-2);
     }
 
