--- a/components/TrustedBy/TrustedBy.module.scss
+++ b/components/TrustedBy/TrustedBy.module.scss
@@ -46,13 +46,13 @@
     .logoLink:hover {
         background: var(--surface-level-1-hover);
         box-shadow: var(--shadow-elev-2);
-        transform: translateY(-1px);
+        transform: translateY(calc(var(--space-scale-025) / -4));
     }
 
     .logoLink:active {
         background: var(--surface-level-1-active);
         box-shadow: var(--shadow-elev-3);
-        transform: translateY(1px);
+        transform: translateY(calc(var(--space-scale-025) / 4));
     }
 
     .logo {
