--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -142,10 +142,10 @@ section {
 
 .visually-hidden {
     position: absolute;
-    width: 1px;
-    height: 1px;
+    width: calc(var(--space-scale-025) / 4);
+    height: calc(var(--space-scale-025) / 4);
     padding: 0;
-    margin: -1px;
+    margin: calc(var(--space-scale-025) / -4);
     overflow: hidden;
     clip-path: inset(50%);
     white-space: nowrap;
@@ -236,8 +236,8 @@ pre {
 /* Scrollbar styling */
 @supports selector(::-webkit-scrollbar) {
     html::-webkit-scrollbar {
-        width: 0.6rem;
-        height: 0.6rem;
+        width: calc(var(--space-scale-100) * 0.6);
+        height: calc(var(--space-scale-100) * 0.6);
     }
 
     html::-webkit-scrollbar-track {
