--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -102,7 +102,7 @@ p:has(+ h6) {
 
 ul,
 ol {
-    padding-inline-start: 1.25em;
+    padding-inline-start: calc(var(--space-scale-100) * 1.25);
     margin-block: 0 var(--space-scale-100);
 }
 
